@@ -1,3 +1,8 @@
+2008-06-06  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (show-all-children): Always raise all
+	displayed children. Remove all references to raise-p.
+
 2008-06-04  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/menu-def.lisp (child-menu): New menu entry on raise/lower
